--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body class="scroll-right logo-pulse">
   <div class="layout">
 
     <!-- LEVÁ STRANA -->
