--- a/auth/login-en.html
+++ b/auth/login-en.html
@@ -79,7 +79,8 @@
     </form>
 
     <div class="auth-footer">
-      <p>
+      <p><a href="/auth/forgot-password-en.html">Forgot password?</a></p>
+        <p>
         Don’t have an account?
         <a href="/auth/register-en.html">Create one</a>
       </p>
