--- a/auth/login.html
+++ b/auth/login.html
@@ -79,11 +79,14 @@
     </form>
 
     <div class="auth-footer">
-      <p>
-        Nemáš ještě účet?
-        <a href="/auth/register.html">Vytvoř si ho</a>
-      </p>
-    </div>
+  <p>
+    <a href="/auth/forgot-password.html">Zapomenuté heslo?</a>
+  </p>
+  <p>
+    Nemáš ještě účet?
+    <a href="/auth/register.html">Vytvoř si ho</a>
+  </p>
+</div>
   </main>
 
   <footer class="main-footer">
