--- a/auth/forgot-password.html
+++ b/auth/forgot-password.html
@@ -2,86 +2,83 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Reset hesla | Ordo Draconis</title>
+  <title>Obnovení hesla | Ordo Draconis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body class="auth-page">
-
-<header class="main-header">
-  <div class="logo"><a href="/">Ordo Draconis</a></div>
-  <div class="auth">
-    <a href="/auth/login.html" class="btn">Přihlášení</a>
-  </div>
-  <div class="lang">
-    <a href="/auth/forgot-password.html" class="active">CS</a>
-    <a href="/auth/forgot-password-en.html">EN</a>
-  </div>
-</header>
-
-<main class="auth-container">
-  <h1>Reset hesla</h1>
-  <p class="auth-subtitle">Zadej e-mail. Pošleme ti odkaz pro nastavení nového hesla.</p>
-
-  <form id="fpForm" class="auth-form">
-    <div class="form-group">
-      <label for="email">E-mailová adresa</label>
-      <input type="email" id="email" name="email" required autocomplete="email">
+  <header class="main-header">
+    <div class="logo"><a href="/">Ordo Draconis</a></div>
+    <div class="auth">
+      <a href="/auth/login.html" class="btn">Přihlášení</a>
     </div>
+    <div class="lang">
+      <a href="/auth/forgot-password.html" class="active">CS</a>
+      <a href="/auth/forgot-password-en.html">EN</a>
+    </div>
+  </header>
 
-    <div class="form-error" id="fpError" style="display:none;"></div>
-    <div class="form-success" id="fpOk" style="display:none;"></div>
+  <main class="auth-container">
+    <h1>Obnovení hesla</h1>
+    <p class="auth-subtitle">Zadej svůj e-mail. Pokud existuje účet, pošleme ti odkaz pro nastavení nového hesla.</p>
 
-    <button type="submit" class="btn-primary" id="fpBtn">Odeslat odkaz</button>
-  </form>
+    <form id="forgotForm" class="auth-form">
+      <div class="form-group">
+        <label for="email">E-mailová adresa</label>
+        <input type="email" id="email" name="email" placeholder="tvuj@email.cz" required>
+      </div>
 
-  <div class="auth-footer">
-    <p><a href="/auth/login.html">← Zpět na přihlášení</a></p>
-  </div>
-</main>
+      <div class="form-error" id="forgotError" style="display:none;"></div>
+      <div class="form-success" id="forgotOk" style="display:none;"></div>
 
-<footer class="main-footer"><p>© Ordo Draconis</p></footer>
+      <button type="submit" class="btn-primary" id="btn">Odeslat odkaz</button>
+    </form>
 
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const form = document.getElementById('fpForm');
-  const err = document.getElementById('fpError');
-  const ok = document.getElementById('fpOk');
-  const btn = document.getElementById('fpBtn');
+    <div class="auth-footer">
+      <p><a href="/auth/login.html">Zpět na přihlášení</a></p>
+    </div>
+  </main>
 
-  function showErr(msg){ err.textContent = msg; err.style.display='block'; ok.style.display='none'; }
-  function showOk(msg){ ok.textContent = msg; ok.style.display='block'; err.style.display='none'; }
+  <footer class="main-footer"><p>© Ordo Draconis</p></footer>
 
-  form.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    err.style.display='none'; ok.style.display='none';
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const form = document.getElementById('forgotForm');
+    const errBox = document.getElementById('forgotError');
+    const okBox = document.getElementById('forgotOk');
+    const btn = document.getElementById('btn');
 
-    const email = document.getElementById('email').value.trim();
-    btn.disabled = true; btn.textContent = 'Odesílám…';
+    function showErr(m){ errBox.textContent=m; errBox.style.display='block'; okBox.style.display='none'; }
+    function showOk(m){ okBox.textContent=m; okBox.style.display='block'; errBox.style.display='none'; }
 
-    try {
-      const res = await fetch('/api/request_reset.php', {
-        method: 'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({ email, lang: 'cs' })
-      });
-      const data = await res.json().catch(()=> ({}));
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      errBox.style.display='none';
+      okBox.style.display='none';
 
-      // bezpečný UX: vždy řekneme “posláno”, i když email neexistuje
-      if (res.ok) {
-        showOk('Pokud účet existuje, odeslali jsme ti e-mail s odkazem pro reset hesla. Zkontroluj i spam.');
-      } else {
-        showErr(data.error || 'Nepodařilo se odeslat e-mail. Zkus to prosím později.');
+      btn.disabled = true;
+      btn.style.opacity = '0.75';
+
+      const email = document.getElementById('email').value.trim();
+
+      try {
+        const res = await fetch('/api/request_reset.php', {
+          method: 'POST',
+          headers: {'Content-Type':'application/json'},
+          body: JSON.stringify({ email, lang: 'cs' })
+        });
+
+        // vždy ok -> UX zpráva
+        await res.json().catch(()=>({}));
+        showOk('Pokud existuje účet s tímto e-mailem, odeslali jsme ověřovací odkaz.');
+      } catch (e) {
+        showErr('Nepodařilo se odeslat požadavek. Zkus to prosím znovu.');
+      } finally {
+        btn.disabled = false;
+        btn.style.opacity = '1';
       }
-    } catch (e) {
-      showErr('Chyba připojení. Zkus to prosím později.');
-    } finally {
-      btn.disabled = false; btn.textContent = 'Odeslat odkaz';
-    }
+    });
   });
-});
-</script>
-
+  </script>
 </body>
 </html>
