--- a/index-en.html
+++ b/index-en.html
@@ -102,6 +102,24 @@
   <span>·</span>
   <a href="pages/gdpr-en.html">GDPR</a>
 </div>
+<div class="footer-banners" aria-label="Vote banners">
+    <!-- RankZone -->
+    <a href="https://l2rankzone.com/lineage2-servers/ordo-draconis/334/vote"
+       target="_blank"
+       rel="noopener"
+       title="l2rankzone lineage 2 private l2servers">
+      <img src="https://files.l2rankzone.com/banners/l2rankzone-l2servers-l2top-v3.png"
+           alt="l2rankzone lineage 2 private l2servers">
+    </a>
+
+    <!-- Sem jen přidáš další bannery vedle sebe:
+    <a href="..." target="_blank" rel="noopener" title="...">
+      <img src="..." alt="...">
+    </a>
+    -->
+  </div>
+
+</div>
 
   </aside>
 </div>
