--- a/index-en.html
+++ b/index-en.html
@@ -94,15 +94,18 @@
       </div>
     </div>
 
-    <!-- ✅ NEW: footer links -->
-    <div class="page-footer">
-  <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
-  <span>·</span>
-  <a href="pages/rules-en.html">Rules</a>
-  <span>·</span>
-  <a href="pages/gdpr-en.html">GDPR</a>
-</div>
-<div class="footer-banners" aria-label="Vote banners">
+      <!-- ✅ FOOTER STEJNÝ JAKO NA OSTATNÍCH STRÁNKÁCH -->
+     <div class="page-footer">
+
+  <div class="footer-links">
+    <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
+    <span class="dot">·</span>
+    <a href="pages/rules.html">Rules</a>
+    <span class="dot">·</span>
+    <a href="pages/gdpr.html">GDPR</a>
+  </div>
+
+  <div class="footer-banners" aria-label="Vote banners">
     <!-- RankZone -->
     <a href="https://l2rankzone.com/lineage2-servers/ordo-draconis/334/vote"
        target="_blank"
