--- a/pages/rules.html
+++ b/pages/rules.html
@@ -144,14 +144,35 @@
         </p>
       </div>
 
-      <!-- Nenápadný footer -->
-      <div class="page-footer">
-        <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
-        <span>·</span>
-        <a href="rules.html" class="active">Pravidla</a>
-        <span>·</span>
-        <a href="gdpr.html">GDPR</a>
-      </div>
+       <!-- ✅ FOOTER STEJNÝ JAKO NA OSTATNÍCH STRÁNKÁCH -->
+     <div class="page-footer">
+
+  <div class="footer-links">
+    <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
+    <span class="dot">·</span>
+    <a href="pages/rules.html">Pravidla</a>
+    <span class="dot">·</span>
+    <a href="pages/gdpr.html">GDPR</a>
+  </div>
+
+  <div class="footer-banners" aria-label="Vote banners">
+    <!-- RankZone -->
+    <a href="https://l2rankzone.com/lineage2-servers/ordo-draconis/334/vote"
+       target="_blank"
+       rel="noopener"
+       title="l2rankzone lineage 2 private l2servers">
+      <img src="https://files.l2rankzone.com/banners/l2rankzone-l2servers-l2top-v3.png"
+           alt="l2rankzone lineage 2 private l2servers">
+    </a>
+
+    <!-- Sem jen přidáš další bannery vedle sebe:
+    <a href="..." target="_blank" rel="noopener" title="...">
+      <img src="..." alt="...">
+    </a>
+    -->
+  </div>
+
+</div>
 
     </aside>
   </div>
