--- a/pages/server-en.html
+++ b/pages/server-en.html
@@ -176,15 +176,15 @@
 
     </div>
 
-    <!-- ✅ FOOTER STEJNÝ JAKO NA OSTATNÍCH STRÁNKÁCH -->
+  <!-- ✅ FOOTER STEJNÝ JAKO NA OSTATNÍCH STRÁNKÁCH -->
      <div class="page-footer">
 
   <div class="footer-links">
     <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
     <span class="dot">·</span>
-    <a href="pages/rules.html">Rules</a>
+    <a href="pages/rules-en.html">Rules</a>
     <span class="dot">·</span>
-    <a href="pages/gdpr.html">GDPR</a>
+    <a href="pages/gdpr-en.html">GDPR</a>
   </div>
 
   <div class="footer-banners" aria-label="Vote banners">
