--- a/pages/start-en.html
+++ b/pages/start-en.html
@@ -80,9 +80,9 @@
   <div class="footer-links">
     <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
     <span class="dot">·</span>
-    <a href="pages/rules-en.html">Rules</a>
+    <a href="rules-en.html">Rules</a>
     <span class="dot">·</span>
-    <a href="pages/gdpr-en.html">GDPR</a>
+    <a href="gdpr-en.html">GDPR</a>
   </div>
 
   <div class="footer-banners" aria-label="Vote banners">
