--- a/pages/world.html
+++ b/pages/world.html
@@ -62,9 +62,9 @@
   <div class="footer-links">
     <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
     <span class="dot">·</span>
-    <a href="pages/rules.html">Pravidla</a>
+    <a href="rules.html">Pravidla</a>
     <span class="dot">·</span>
-    <a href="pages/gdpr.html">GDPR</a>
+    <a href="gdpr.html">GDPR</a>
   </div>
 
   <div class="footer-banners" aria-label="Vote banners">
