--- a/index.html
+++ b/index.html
@@ -120,18 +120,15 @@
       <img src="https://files.l2rankzone.com/banners/l2rankzone-l2servers-l2top-v3.png"
            alt="l2rankzone lineage 2 private l2servers">
     </a>
-
-    <!-- Begin L2Top.CO - Vote Banner Code -->
-<a href="https://l2top.co/vote/server/OrdoDraconis" 
-target="_blank">
-<img src="https://l2top.co/img/banners/l2topco_mini2.png" alt="Vote for OrdoDraconis in L2Top.CO" border="0"></a></p>
-<!-- End L2Top.CO - Vote Banner Code -->
-    <!-- Sem jen přidáš další bannery vedle sebe:
-    <a href="..." target="_blank" rel="noopener" title="...">
-      <img src="..." alt="...">
-    </a>
-    -->
-  </div>
+<!-- L2Top.CO -->
+  <a href="https://l2top.co/vote/server/OrdoDraconis"
+     target="_blank"
+     rel="noopener"
+     title="Vote for OrdoDraconis in L2Top.CO">
+    <img src="https://l2top.co/img/banners/l2topco_mini2.png"
+         alt="Vote for OrdoDraconis in L2Top.CO">
+  </a>
+</div>
 
 </div>
 
