--- a/index.html
+++ b/index.html
@@ -128,7 +128,14 @@
     <img src="https://l2top.co/img/banners/l2topco_mini2.png"
          alt="Vote for OrdoDraconis in L2Top.CO">
   </a>
-</div>
+  <!-- L2Network -->
+    <a href="https://l2network.eu/index.php?a=in&u=Ainestol"
+       target="_blank" rel="noopener"
+       title="L2Network">
+      <img src="https://l2network.eu/button.php?u=Ainestol&buttontype=static"
+           alt="L2Network">
+    </a>
+  </div>
 
 </div>
 
