--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
       <img src="https://l2network.eu/button.php?u=Ainestol&buttontype=static"
            alt="L2Network">
     </a>
-    <!-- HopZone (footer banner) -->
+  <!-- HopZone (footer banner - small) -->
 <a href="https://l2.hopzone.net/site/vote/107218/1"
    target="_blank"
    rel="noopener"
    title="L2.HOPZONE.NET – Lineage 2 Servers ranking">
-  <img src="https://l2.hopzone.net/assets/img/banners/vote_banners/simple_banner_1.png"
-       alt="Vote for L2ORDO.NET"
-       style="border:0; width:140px; height:120px;">
+  <img class="vote-banner"
+       src="https://l2.hopzone.net/assets/img/banners/vote_banners/simple_banner_1.png"
+       alt="Vote for L2ORDO.NET">
 </a>
   </div>
 
