--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
        src="https://l2.hopzone.net/assets/img/banners/vote_banners/simple_banner_1.png"
        alt="Vote for L2ORDO.NET">
 </a>
+<!-- L2Top.org -->
+<a href="https://l2top.org/server/ordodraconis/vote/"
+   target="_blank"
+   rel="noopener"
+   title="New Lineage 2 private servers">
+  <img src="https://l2top.org/vote/simple_1.jpg"
+       alt="New Lineage 2 private servers"
+       class="vote-banner">
+</a>
   </div>
 
 </div>
