--- a/pages/server.html
+++ b/pages/server.html
@@ -158,22 +158,45 @@
   <div class="footer-banners" aria-label="Vote banners">
     <!-- RankZone -->
     <a href="https://l2rankzone.com/lineage2-servers/ordo-draconis/334/vote"
-       target="_blank"
-       rel="noopener"
+       target="_blank" rel="noopener"
        title="l2rankzone lineage 2 private l2servers">
       <img src="https://files.l2rankzone.com/banners/l2rankzone-l2servers-l2top-v3.png"
            alt="l2rankzone lineage 2 private l2servers">
     </a>
 
-    <!-- Sem jen přidáš další bannery vedle sebe:
-    <a href="..." target="_blank" rel="noopener" title="...">
-      <img src="..." alt="...">
+    <!-- L2Top.CO -->
+    <a href="https://l2top.co/vote/server/OrdoDraconis"
+       target="_blank" rel="noopener"
+       title="Vote for OrdoDraconis on L2Top.CO">
+      <img src="https://l2top.co/img/banners/l2topco_mini2.png"
+           alt="Vote for OrdoDraconis in L2Top.CO">
     </a>
-    -->
+
+    <!-- L2Network -->
+    <a href="https://l2network.eu/index.php?a=in&u=Ainestol"
+       target="_blank" rel="noopener"
+       title="L2Network">
+      <img src="https://l2network.eu/button.php?u=Ainestol&buttontype=static"
+           alt="L2Network">
+    </a>
+
+    <!-- HopZone (POZOR: bez inline style position:fixed!) -->
+    <a href="https://l2.hopzone.net/site/vote/107218/1"
+       target="_blank" rel="noopener"
+       title="L2.HOPZONE.NET – Lineage 2 Servers ranking">
+      <img src="https://l2.hopzone.net/assets/img/banners/vote_banners/simple_banner_1.png"
+           alt="Vote for L2ORDO.NET">
+    </a>
+
+    <!-- L2Top.org (POZOR: bez inline style position:fixed!) -->
+    <a href="https://l2top.org/server/ordodraconis/vote/"
+       target="_blank" rel="noopener"
+       title="New Lineage 2 private servers">
+      <img src="https://l2top.org/vote/simple_1.jpg"
+           alt="New Lineage 2 private servers">
+    </a>
   </div>
-
 </div>
-
   </aside>
 </div>
 
